# textura_glfw_glad_cpp

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: shader.fs
src/: CMakeLists.txt  loadImage.hpp  loaderShader.hpp  main.cpp
